Improved logging, fewer versions loaded
Also added the eclipse files (yes, I use eclipse for python) to the
gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ __pycache__
 
 McPyConfig.yaml
 /.idea/
+
+# Folders that we create
+McPy/
+libs/
+
+# Eclipse files
+.project
+.pydevproject
+.settings/
