--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ quarry
 McPyConfig.yaml
 /.idea/
 
-# Folders that we create
+# Folders/Files that we create
 McPy/
 libs/
+/plugins/
+/classes/plugins/events.pickle
 
 # Eclipse files
 .project
